headers/phonon.h


    typedef void                IPLvoid;            
    typedef int                 IPLint32;           
    typedef float               IPLfloat32;         
    typedef void*               IPLhandle;
    typedef enum {
        IPL_STATUS_SUCCESS,         
        IPL_STATUS_FAILURE,         
        IPL_STATUS_OUTOFMEMORY,     
        IPL_STATUS_INITIALIZATION   
    } IPLerror;
    typedef struct {
        IPLfloat32 x;   
        IPLfloat32 y;   
        IPLfloat32 z;   
    } IPLVector3;
    typedef enum {
        IPL_CHANNELLAYOUTTYPE_SPEAKERS,     
        IPL_CHANNELLAYOUTTYPE_AMBISONICS    
    } IPLChannelLayoutType;
    typedef enum {
        IPL_CHANNELLAYOUT_MONO,             
        IPL_CHANNELLAYOUT_STEREO,           
        IPL_CHANNELLAYOUT_QUADRAPHONIC,     
        IPL_CHANNELLAYOUT_FIVEPOINTONE,     
        IPL_CHANNELLAYOUT_SEVENPOINTONE,    
        IPL_CHANNELLAYOUT_CUSTOM            
    } IPLChannelLayout;
    typedef enum {
        IPL_AMBISONICSORDERING_FURSEMALHAM, 
        IPL_AMBISONICSORDERING_ACN          
    } IPLAmbisonicsOrdering;
    typedef enum {
        IPL_AMBISONICSNORMALIZATION_FURSEMALHAM,    
        IPL_AMBISONICSNORMALIZATION_SN3D,           
        IPL_AMBISONICSNORMALIZATION_N3D             
    } IPLAmbisonicsNormalization;
    typedef enum {
        IPL_CHANNELORDER_INTERLEAVED,   
        IPL_CHANNELORDER_DEINTERLEAVED  
    } IPLChannelOrder;
    typedef struct {
        IPLChannelLayoutType        channelLayoutType;          
        IPLChannelLayout            channelLayout;              
        IPLint32                    numSpeakers;                
        IPLVector3*                 speakerDirections;          
        IPLint32                    ambisonicsOrder;            
        IPLAmbisonicsOrdering       ambisonicsOrdering;         
        IPLAmbisonicsNormalization  ambisonicsNormalization;    
        IPLChannelOrder             channelOrder;               
    } IPLAudioFormat;
    typedef struct {
        IPLAudioFormat  format;                 
        IPLint32        numSamples;             
        IPLfloat32*     interleavedBuffer;      
        IPLfloat32**    deinterleavedBuffer;    
    } IPLAudioBuffer;
    typedef enum {
        IPL_HRTFINTERPOLATION_NEAREST,  
        IPL_HRTFINTERPOLATION_BILINEAR  
    } IPLHrtfInterpolation;
    IPLAPI IPLerror iplCreateBinauralEffect(IPLhandle renderer, IPLAudioFormat inputFormat,
        IPLAudioFormat outputFormat, IPLhandle* effect);
    IPLAPI IPLvoid iplDestroyBinauralEffect(IPLhandle* effect);
    IPLAPI IPLvoid iplApplyBinauralEffect(IPLhandle effect, IPLAudioBuffer inputAudio, IPLVector3 direction,
        IPLHrtfInterpolation interpolation, IPLAudioBuffer outputAudio);
    IPLAPI IPLvoid iplApplyBinauralEffectWithParameters(IPLhandle effect, IPLAudioBuffer inputAudio,
        IPLVector3 direction, IPLHrtfInterpolation interpolation, IPLAudioBuffer outputAudio, IPLfloat32* leftDelay,
        IPLfloat32* rightDelay);
    IPLAPI IPLvoid iplFlushBinauralEffect(IPLhandle effect);
    IPLAPI IPLerror iplCreateVirtualSurroundEffect(IPLhandle renderer, IPLAudioFormat inputFormat,
        IPLAudioFormat outputFormat, IPLhandle* effect);
    IPLAPI IPLvoid iplDestroyVirtualSurroundEffect(IPLhandle* effect);
    IPLAPI IPLvoid iplApplyVirtualSurroundEffect(IPLhandle effect, IPLAudioBuffer inputAudio,
        IPLAudioBuffer outputAudio);
    IPLAPI IPLvoid iplFlushVirtualSurroundEffect(IPLhandle effect);
    IPLAPI IPLerror iplCreateAmbisonicsPanningEffect(IPLhandle renderer, IPLAudioFormat inputFormat,
        IPLAudioFormat outputFormat, IPLhandle* effect);
    IPLAPI IPLvoid iplDestroyAmbisonicsPanningEffect(IPLhandle* effect);
    IPLAPI IPLvoid iplApplyAmbisonicsPanningEffect(IPLhandle effect, IPLAudioBuffer inputAudio,
        IPLAudioBuffer outputAudio);
    IPLAPI IPLvoid iplFlushAmbisonicsPanningEffect(IPLhandle effect);