src/bindgen.rs

pub const IPLHrtfInterpolation_IPL_HRTFINTERPOLATION_NEAREST: IPLHrtfInterpolation = 0;
pub const IPLHrtfInterpolation_IPL_HRTFINTERPOLATION_BILINEAR: IPLHrtfInterpolation = 1;
pub type IPLHrtfInterpolation = u32;
extern "C" {
    /// Creates an Object-Based Binaural Effect object. This can be used to render a point source using HRTF-based
    /// binaural rendering.
    ///
    /// \param  renderer            Handle to a Binaural Renderer object.
    /// \param  inputFormat         The format of the audio buffers that will be passed as input to this effect. All
    /// subsequent calls to \c ::iplApplyBinauralEffect for this effect object must use
    /// \c IPLAudioBuffer objects with the same format as specified here. The input format
    /// must not be Ambisonics.
    /// \param  outputFormat        The format of the audio buffers which will be used to retrieve the output from this
    /// effect. All subsequent calls to \c ::iplApplyBinauralEffect for this effect object
    /// must use \c IPLAudioBuffer objects with the same format as specified here. The
    /// output format must be stereo (2 channels).
    /// \param  effect              [out] Handle to the created Object-Based Binaural Effect object.
    ///
    /// \return Status code indicating whether or not the operation succeeded.
    pub fn iplCreateBinauralEffect(
        renderer: IPLhandle,
        inputFormat: IPLAudioFormat,
        outputFormat: IPLAudioFormat,
        effect: *mut IPLhandle,
    ) -> IPLerror;
}
extern "C" {
    /// Destroys an Object-Based Binaural Effect object.
    ///
    /// \param  effect              [in, out] Address of a handle to the Object-Based Binaural Effect object to
    /// destroy.
    pub fn iplDestroyBinauralEffect(effect: *mut IPLhandle) -> IPLvoid;
}
extern "C" {
    /// Applies HRTF-based binaural rendering to a buffer of audio data. The input audio is treated as emanating from
    /// a single point. If the input audio buffer contains more than one channel, it will automatically be downmixed to
    /// mono. Using bilinear interpolation (by setting \c interpolation to \c ::IPL_HRTFINTERPOLATION_BILINEAR) can
    /// incur a relatively high CPU cost. Use it only on sources where nearest-neighbor filtering
    /// (\c ::IPL_HRTFINTERPOLATION_NEAREST) produces suboptimal results. Typically, bilinear filtering is most useful
    /// for wide-band noise-like sounds, such as radio static, mechanical noise, fire, etc.
    ///
    /// \param  effect              Handle to an Object-Based Binaural Effect object.
    /// \param  inputAudio          Audio buffer containing the data to render using binaural rendering. The format of
    /// this buffer must match the \c inputFormat parameter passed to
    /// \c ::iplCreateBinauralEffect.
    /// \param  direction           Unit vector from the listener to the point source, relative to the listener's
    /// coordinate system.
    /// \param  interpolation       The interpolation technique to use when rendering a point source at a location
    /// that is not contained in the measured HRTF data used by Phonon. **If using a custom
    /// HRTF database, this value must be set to IPL_HRTFINTERPOLATION_BILINEAR.**
    /// \param  outputAudio         Audio buffer that should contain the rendered audio data. The format of this
    /// buffer must match the \c outputFormat parameter passed to
    /// \c ::iplCreateBinauralEffect.
    pub fn iplApplyBinauralEffect(
        effect: IPLhandle,
        inputAudio: IPLAudioBuffer,
        direction: IPLVector3,
        interpolation: IPLHrtfInterpolation,
        outputAudio: IPLAudioBuffer,
    ) -> IPLvoid;
}
extern "C" {
    pub fn iplApplyBinauralEffectWithParameters(
        effect: IPLhandle,
        inputAudio: IPLAudioBuffer,
        direction: IPLVector3,
        interpolation: IPLHrtfInterpolation,
        outputAudio: IPLAudioBuffer,
        leftDelay: *mut IPLfloat32,
        rightDelay: *mut IPLfloat32,
    ) -> IPLvoid;
}
extern "C" {
    /// Resets any internal state maintained by an Object-Based Binaural Effect object. This is useful if the
    /// Object-Based Binaural Effect object is going to be disabled/unused for a few frames; resetting the internal
    /// state will prevent an audible glitch when the Object-Based Binaural Effect object is re-enabled at a later
    /// time.
    ///
    /// \param  effect              Handle to an Object-Based Binaural Effect object.
    pub fn iplFlushBinauralEffect(effect: IPLhandle) -> IPLvoid;
}
extern "C" {
    /// Creates a Virtual Surround Effect object. This can be used to render a multichannel surround sound data using
    /// HRTF-based binaural rendering.
    ///
    /// \param  renderer            Handle to a Binaural Renderer object.
    /// \param  inputFormat         The format of the audio buffers that will be passed as input to this effect. All
    /// subsequent calls to \c ::iplApplyVirtualSurroundEffect for this effect object must
    /// use \c IPLAudioBuffer objects with the same format as specified here. The input
    /// format must not be Ambisonics.
    /// \param  outputFormat        The format of the audio buffers which will be used to retrieve the output from this
    /// effect. All subsequent calls to \c ::iplApplyVirtualSurroundEffect for this effect
    /// object must use \c IPLAudioBuffer objects with the same format as specified here.
    /// The output format must be stereo (2 channels).
    /// \param  effect              [out] Handle to the created Virtual Surround Effect object.
    ///
    /// \return Status code indicating whether or not the operation succeeded.
    pub fn iplCreateVirtualSurroundEffect(
        renderer: IPLhandle,
        inputFormat: IPLAudioFormat,
        outputFormat: IPLAudioFormat,
        effect: *mut IPLhandle,
    ) -> IPLerror;
}
extern "C" {
    /// Destroys a Virtual Surround Effect object.
    ///
    /// \param  effect              [in, out] Address of a handle to the Virtual Surround Effect object to destroy.
    pub fn iplDestroyVirtualSurroundEffect(effect: *mut IPLhandle) -> IPLvoid;
}
extern "C" {
    /// Applies HRTF-based binaural rendering to a buffer of multichannel audio data.
    ///
    /// \param  effect              Handle to a Virtual Surround Effect.
    /// \param  inputAudio          Audio buffer containing the data to render using binaural rendering. The format of
    /// this buffer must match the \c inputFormat parameter passed to
    /// \c ::iplCreateVirtualSurroundEffect.
    /// \param  outputAudio         Audio buffer that should contain the rendered audio data. The format of this buffer
    /// must match the \c outputFormat parameter passed to
    /// \c ::iplCreateVirtualSurroundEffect.
    ///
    /// \remark When using a custom HRTF database, calling this function is not supported.
    pub fn iplApplyVirtualSurroundEffect(
        effect: IPLhandle,
        inputAudio: IPLAudioBuffer,
        outputAudio: IPLAudioBuffer,
    ) -> IPLvoid;
}
extern "C" {
    /// Resets any internal state maintained by a Virtual Surround Effect object. This is useful if the Virtual
    /// Surround Effect object is going to be disabled/unused for a few frames; resetting the internal state will
    /// prevent an audible glitch when the Virtual Surround Effect object is re-enabled at a later time.
    ///
    /// \param  effect              Handle to a Virtual Surround Effect object.
    pub fn iplFlushVirtualSurroundEffect(effect: IPLhandle) -> IPLvoid;
}
extern "C" {
    /// Creates an Ambisonics Panning Effect object. This can be used to render higher-order Ambisonics data using
    /// standard panning algorithms.
    ///
    /// \param  renderer            Handle to a Binaural Renderer object.
    /// \param  inputFormat         The format of the audio buffers that will be passed as input to this effect. All
    /// subsequent calls to \c ::iplApplyAmbisonicsPanningEffect for this effect object must
    /// use \c IPLAudioBuffer objects with the same format as specified here. The input
    /// format must be Ambisonics.
    /// \param  outputFormat        The format of the audio buffers which will be used to retrieve the output from this
    /// effect. All subsequent calls to \c ::iplApplyAmbisonicsPanningEffect for this
    /// effect object must use \c IPLAudioBuffer objects with the same format as specified
    /// here.
    /// \param  effect              [out] Handle to the created Ambisonics Panning Effect object.
    ///
    /// \return Status code indicating whether or not the operation succeeded.
    pub fn iplCreateAmbisonicsPanningEffect(
        renderer: IPLhandle,
        inputFormat: IPLAudioFormat,
        outputFormat: IPLAudioFormat,
        effect: *mut IPLhandle,
    ) -> IPLerror;
}
extern "C" {
    /// Destroys an Ambisonics Panning Effect object.
    ///
    /// \param  effect              [in, out] Address of a handle to the Ambisonics Panning Effect object to destroy.
    pub fn iplDestroyAmbisonicsPanningEffect(effect: *mut IPLhandle) -> IPLvoid;
}
extern "C" {
    /// Applies a panning-based rendering algorithm to a buffer of Ambisonics audio data. Ambisonics encoders and decoders
    /// use many different conventions to store the multiple Ambisonics channels, as well as different normalization
    /// schemes. Make sure that you correctly specify these settings when creating the Ambisonics Panning Effect
    /// object, otherwise the rendered audio will be incorrect.
    ///
    /// \param  effect              Handle to an Ambisonics Panning Effect object.
    /// \param  inputAudio          Audio buffer containing the data to render. The format of
    /// this buffer must match the \c inputFormat parameter passed to
    /// \c ::iplCreateAmbisonicsPanningEffect.
    /// \param  outputAudio         Audio buffer that should contain the rendered audio data. The format of this buffer
    /// must match the \c outputFormat parameter passed to
    /// \c ::iplCreateAmbisonicsPanningEffect.
    pub fn iplApplyAmbisonicsPanningEffect(
        effect: IPLhandle,
        inputAudio: IPLAudioBuffer,
        outputAudio: IPLAudioBuffer,
    ) -> IPLvoid;
}
extern "C" {
    /// Resets any internal state maintained by an Ambisonics Panning Effect object. This is useful if the Ambisonics
    /// Panning Effect object is going to be disabled/unused for a few frames; resetting the internal state will
    /// prevent an audible glitch when the Ambisonics Panning Effect object is re-enabled at a later time.
    ///
    /// \param  effect              Handle to an Ambisonics Panning Effect object.
    pub fn iplFlushAmbisonicsPanningEffect(effect: IPLhandle) -> IPLvoid;
}
